<resources>
    <string name="app_name">MAD-Final-Example</string>
    <string name="Home">home</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="username">UserName</string>
    <string name="home">Home</string>
    <string name="editeprofile">Edite Profile</string>
    <string name="search">Search</string>
    <string name="dateofbirth">Date Of Birth</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="editr">Edite</string>
    <string name="delete">Delete</string>
    <string name="profilemanagement">Profile Management</string>
    <string name="add">Add</string>
    <string name="updateprofile">Update Profile</string>
</resources>