<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15dp"
    android:orientation="vertical"
    tools:context=".EditProfile">

    <TextView
        android:id="@+id/textEP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/editeprofile"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="34sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etUserNameEP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/btnSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search" />

    <EditText
        android:id="@+id/etDobEP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/dateofbirth"
        android:inputType="textPersonName"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/edPasswordEP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="48dp" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvgenderEP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            android:textColor="#000000"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/rbtnEP1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/male"
            android:textColor="#000000" />

        <RadioButton
            android:id="@+id/rdbEP2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/female"
            android:textColor="#000000" />
    </RadioGroup>

    <Button
        android:id="@+id/btnUpdateEP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/editr" />

    <Button
        android:id="@+id/btnDeleteEP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete" />
</LinearLayout>