<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15dp"
    android:orientation="vertical"
    tools:context=".ProfileManagement">

    <TextView
        android:id="@+id/Profilemanagement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profilemanagement"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="34sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etUserNamePM"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/etDobPM"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/dateofbirth"
        android:inputType="date"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/etPasswordPM"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="48dp" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvgenderPM"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            android:textColor="#000000"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/radioButtonPM"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/male"
            android:textColor="#000000" />

        <RadioButton
            android:id="@+id/radioButton2PM"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/female"
            android:textColor="#000000" />
    </RadioGroup>

    <Button
        android:id="@+id/btnAddPM"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add" />

    <Button
        android:id="@+id/btnUpdateProfilePM"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/updateprofile" />

</LinearLayout>